--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0"
+    },
+    "dependencies": {
+        "bootstrap": "^4.4.1",
+        "jquery": "^3.5.1",
+        "popper": "^1.0.1"
     }
 }
